--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,9 +49,12 @@ jobs:
            # a dynamically generated app (we aren't updating the existing Staging or Production apps)
            echo "IS_DYNAMICALLY_GENERATED_APP=true" >> $GITHUB_ENV
 
+    - name: "Create realm-app-id.txt secrets file"
+      if: ${{ !env.REALM_APP_ID }}
+      run: | 
            # Add a secrets file in for the INventoryDemoApp
            echo `pwd`
-           echo "IS_DYNAMICALLY_GENERATED_APP=true" >>  $PWD/inventory/clients/ios-swiftui/InventoryDemo/realm-app-id.txt
+           echo "${{ env.REALM_APP_ID }}" > $PWD/inventory/clients/ios-swiftui/InventoryDemo/realm-app-id.txt
 
 
 # INSTALL THE REALM-CLI AND AUTHENTICATE
