Remove quotes from ignore list (#31)

--- a/.github/workflows/delete-feature-branch-artifacts.yml
+++ b/.github/workflows/delete-feature-branch-artifacts.yml
@@ -4,9 +4,9 @@ name: "Delete feature branch artifacts upon branch deletion"
 on: 
   delete:
     branches-ignore:
-      - 'main'
-      - 'staging'
-      - 'my-fake-branch'
+      - main
+      - staging
+      - my-fake-branch
  
 jobs:    
   deleteArtifacts:
